# crosslinking-api

./: .Dockerfile  .gitignore  .kubernetes.yml  CLAUDE.md  Pipfile  README.md  process_dataset.py  pyproject.toml
.github/workflows/: github-prod.yml
app/: api.py
app/config/: database.py
app/routes/: parse.py  pdbdev.py  pride.py  shared.py  xiview.py
tests/: conftest.py  test_admin_routes.py  test_config.py  test_health.py  test_pdbihm_routes.py  test_pride_routes.py  test_pure_functions.py  test_xiview_routes.py
tests/fixtures/: generate_fixture_db.py  generate_fixture_db.sh  test_db.sql
