[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crosslinking-api"
version = "3.0.1"
description = "FastAPI-based REST API for the PRIDE Crosslinking Section"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Rappsilber Laboratory"}
]

[project.urls]
"Homepage" = "https://github.com/Rappsilber-Laboratory/crosslinking-api"
"Source" = "https://github.com/Rappsilber-Laboratory/crosslinking-api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--cov=app",
    "--cov=db_config_parser",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-branch",
    "--strict-markers",
    "-v",
]
markers = [
    "unit: pure unit tests, no external dependencies",
    "integration: requires a live PostgreSQL test database",
]
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["tests/*", "main.py"]
